--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -23,7 +23,13 @@ const { title, description, image = '/blog-placeholder-1.jpg' } = Astro.props;
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
 {!allowIndexing && <meta name="robots" content="noindex, nofollow" />}
-<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+
+<!-- Favicons -->
+<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+<link rel="icon" type="image/png" sizes="16x16" href="/favicon-32x32.png" />
+<link rel="icon" href="/favicon.ico" />
+<link rel="manifest" href="/site.webmanifest" />
 <link rel="sitemap" href={new URL('/sitemap-index.xml', Astro.site)} />
 <link
   rel="alternate"
